add book module
